--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
 				<%= link_to "Signin", new_user_session_path%> 	
 			<% end %>
 			</li>
-			<li><%= link_to "Sign up", new_registration_path(resource_name) %></li>
+			<li><%= link_to "Sign up", new_registration_path(:user) %></li>
           </ul>
         </div>
       </div>
