Adding my name to home page.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
       <div class="span9"><%= yield %></div>
       <div class="span3">
         <h2>About Me</h2>
-        I am a full stack Ruby on Rail developer from the past 6 years. Ruby on Rails Experts Forum is an online community for expert Ruby on Rails (RoR) developers. Free scripts, Tutorials, Bugs & Fixes are available here. AJAX, MySQL and all major open souce content management systems are discussed here.
+        My Name is vijaya sekhar redy M. I am a full stack Ruby on Rail developer from the past 6 years. Ruby on Rails Experts Forum is an online community for expert Ruby on Rails (RoR) developers. Free scripts, Tutorials, Bugs & Fixes are available here. AJAX, MySQL and all major open souce content management systems are discussed here.
       </div>
       <div class="span3">
         <h3>Rails Documentation</h3>
